# ReceptiViz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: generate_data.py
data/example2/: info.txt  stimulus.npy
data/example3/: activity.npy  info.txt  stimulus.npy
docs/: api.rst  appendix.rst  conf.py  contributing.rst  data_prep.rst  index.rst  installation.rst  usage.rst
docs/source/: conf.py  index.rst
sample_data/example1/: activity.npy  info.txt  stimulus.npy
sample_data/example2/: activity.npy
sample_data/example3/: info.txt  receptive_field.npy
src/receptiviz/: __init__.py  app.py
src/receptiviz/gui/: main_window.py
src/receptiviz/gui/tabs/: receptive_field_tab.py
src/receptiviz/gui/widgets/: dimension_editor.py  dimension_selector.py  file_selection.py  plot_widget.py  range_slider.py
src/receptiviz/processing/: receptive_field.py
src/receptiviz/utils/: data_utils.py
src/receptual/: __init__.py  app.py
src/receptual/gui/: main_window.py
src/receptual/gui/menu_bar/: __init__.py  compute_menu.py  download_menu.py  load_menu.py  menu_bar.py  plot_menu.py  reset_menu.py  save_menu.py
src/receptual/gui/tabs/: encoder.py  receptive_field_tab.py
src/receptual/gui/widgets/: dimension_editor.py  dimension_selector.py  file_selection.py  file_selector.py  plot_widget.py  range_slider.py  sliders.py  status.py
src/receptual/processing/: data_manager.py  plot_manager.py  receptive_field.py
src/receptual/processing/core/: encoder.py
src/receptual/processing/managers/: data_manager.py  plot_manager.py
src/receptual/processing/utils/: data_utils.py  download_sample_data.py  generate_gif.py  generate_sample_data.py
src/receptual/utils/: data_utils.py
tests/: conftest.py  naive_implementations.py  test_encoder.py  test_validate_arrays.py
