[project]
name = "receptual"
version = "0.1.0a1"
description = "A simple tool for computing and visualising neuron receptive fields."
readme = "README.md"
authors = [
    { name = "rory-bedford", email = "rorybedford@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
    "pyqt6>=6.9.0",
    "pyqtgraph>=0.13.7",
]

[project.scripts]
receptual = "receptual.app:main"
generate-sample-data = "receptual.processing.utils.generate_sample_data:main"

[tool.ruff]
line-length = 88
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E203", "E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receptual"]

[tool.hatch.build.targets.sdist]
include = [
  "assets",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=receptual --cov-report=term-missing"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src"]

[tool.coverage.run]
source = ["receptual"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "scipy>=1.15.2",
]
